--- a/VMfiles/CovertChannel/.vscode/settings.json
+++ b/VMfiles/CovertChannel/.vscode/settings.json
@@ -22,6 +22,7 @@
         "initializer_list": "c",
         "utility": "c",
         "system_error": "c",
-        "limits": "c"
+        "limits": "c",
+        "cstdlib": "c"
     }
 }
